crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_11.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_11.py:3:1
  |
1 | from sys import *
2 |
3 | exit(0)
  | ^^^^
help: Replace `exit` with `sys.exit()`
  |
2 + import sys
3 + 
4 ~ sys.exit(0)
  |
note: This is an unsafe fix and may change runtime behavior
