crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_12.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_12.py:3:1
  |
1 | import os \
2 |
3 | exit(0)
  | ^^^^
help: Replace `exit` with `sys.exit()`
  |
1 ~ import os; import sys \
2 |
3 ~ sys.exit(0)
  |
note: This is an unsafe fix and may change runtime behavior
